fix: Fix text alignment spacing in navigation

--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -44,6 +44,7 @@ body {
 .navigation-container ul li {
   flex: 1;
   list-style: none;
+  text-align: center;
 }
 
 .navigation-container li a {
